# Vultron

./: .dockerignore  .env.example  .flake8  .gitignore  .markdownlint-cli2.yaml  .markdownlintignore  .mypy.ini  .pre-commit-config.yaml  AGENTS.md  Acknowledgements.md  CONTEXT.md  CONTRIBUTING.md  COPYRIGHT.md  ContributionInstructions.md  Contributors.md  FAQ.md  LICENSE.md  Makefile  README-DEV.md  README.md  config.example.yaml  extract_notes.py  fix_annotations.py  mdlint.sh  mkdocs.dev.yml  mkdocs.yml  mydb.json  pyproject.toml  pyrightconfig.json  references.bib  requirements.txt  setup.cfg  start-dev.sh  start.sh  strict.markdownlint-cli2.yaml  transform_activities.py  vultron.db  wip_notes
.devcontainer/: Dockerfile  README.md  postcreate.sh  poststart.sh  setup.sh
.devcontainer/certs/: README.md
.github/: CODEOWNERS  copilot-instructions.md  copilot-node-ids.env  dependabot.yml  lsp.json
.github/ISSUE_TEMPLATE/: bug_report.md  concern.md  feature_request.md  idea.md  new_demo_scenario.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/instructions/: python.instructions.md
.github/prompts/: BUGFIX.md  BUILD.md  LEARN.md  PLAN.md
.github/scripts/: filter-mkdocs-warnings.py  mkdocs-build-strict.sh
.github/workflows/: black.yml  bug-label-to-type.yml  demo-image-cache-warm.yml  demo-integration.yml  deploy_site.yml  docs-build-check.yml  linkchecker.yml  (+9 more)
archived_notes/: README.md  append-only-file-handling.md  architecture-ports-and-adapters.md  architecture-review.md  codebase-structure-history.md  datalayer-refactor.md  datalayer-sqlite-design.md  domain-model-superseded.md  multi-actor-architecture.md  parallel-agentic-development.md  plan-history-management.md  plan-organization.md  priority-30-design.md  protocol-event-cascade-gaps.md  state-machine-findings.md  wire-trans-design.md  work-granularity.md
doc/: README.md
docker/: .dockerignore  .env.example  Dockerfile  README.md  demo-entrypoint.sh  docker-compose-multi-actor.yml  docker-compose.yml  service-colors.env
docs/: TODO.md  behaviors.md  conclusion.md  faq.md  formal_protocol.md  future_work.md  glossary.md  implementation_notes.md  index.md
from_tex/: Abstract {#abstract .unnumbered}.md  Acknowledgments {#acknowledgments .unnumbered}.md  Discriminating Skill and Luck in Observations {#sec:skill_luck}.md  Per-State Details {#appendix:actions}.md  Sequences of Events and Possible Histories in CVD {#sec:poss_hist}.md  _ch2.md  abstract.md  acronyms_and_footnotes.md  app_a.md  ch1.md  ch2.md  ch3.md  ch4.md  ch5.md  ch6.md  ch7.md  ch8.md  ch9.md  frontmatter.md  notes.md  test.md
integration_tests/: README.md
not_working/: __init__.py  test_messaging_outbound_behaviors.py  test_report_to_others.py
notes/: README.md  activity-factories.md  activitystreams-semantics.md  activitystreams-state-update.md  actor-knowledge-model.md  agentic-workflow.md  agents-md-structure.md  append-only-file-handling.md  architecture-adapters.md  architecture-hexagonal.md  architecture-ports-and-adapters.md  architecture-ports.md  architecture-review.md  asgi-emitter.md  behavioral-conformance-specs.md  bt-canonical-reference.md  bt-composability.md  bt-design-patterns.md  bt-fuzzer-nodes-embargo.md  bt-fuzzer-nodes-messaging.md  bt-fuzzer-nodes-report-management.md  bt-fuzzer-nodes-vul-discovery.md  bt-fuzzer-nodes.md  bt-fuzzer-rm-closure.md  bt-fuzzer-rm-exploit.md  bt-fuzzer-rm-fix.md  bt-fuzzer-rm-id-assignment.md  bt-fuzzer-rm-prioritization.md  bt-fuzzer-rm-publication.md  bt-fuzzer-rm-reporting.md  bt-fuzzer-rm-threat.md  bt-fuzzer-rm-validation.md  bt-integration.md  bt-pitfalls.md  bt-reusability.md  bugfix-workflow.md  call-out-configuration.md  canonical-bt-reference.md  case-bootstrap-trust.md  case-communication-model.md  (+67 more)
ontology/: activitystreams.ttl  deterministicfiniteautomata.ttl  rfc2119.ttl  vulspolicy.ttl  vultron_activitystreams.ttl  vultron_process.ttl  vultron_protocol.ttl
plan/: BT_INTEGRATION.md  BUGS.md  BUILD_LEARNINGS.md  GAP_ANALYSIS_2026-02-13.md  IDEA-HISTORY.md  IDEAS.md  IDEATION.md  IMPLEMENTATION_HISTORY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PLAN.md  PRIORITIES.md  PRIORITY_HISTORY.md
prompts/: AGENTS_META_prompt.md  ARCHITECTURE_REVIEW_prompt.md  BT_DESIGN_prompt.md  BUGFIX_prompt.md  BUGS_FROM_LOGS_prompt.md  BUILD_prompt.md  DESIGN_prompt.md  EXTRACT_PROTOCOL_SPEC_prompt.md  IDEATION_prompt.md  LEARN_EXTRA_prompt.md  LEARN_prompt.md  PLAN_prompt.md  SPEC_STYLE_prompt.md
scripts/: migrate_spec_kinds.py
specs/: AGENTS.md  README.md  activity-factories.md  activity-factories.yaml  actor-knowledge-model.md  actor-knowledge-model.yaml  agentic-readiness.md  agentic-readiness.yaml  architecture.md  architecture.yaml  behavior-tree-integration.md  behavior-tree-integration.yaml  behavior-tree-node-design.md  behavior-tree-node-design.yaml  bt-composability.md  bt-composability.yaml  bugfix-workflow.md  bugfix-workflow.yaml  build-workflow.yaml  case-bootstrap-trust.yaml  case-handlers.md  case-ledger-processing.yaml  case-log-processing.md  case-log-processing.yaml  case-management.md  case-management.yaml  case-proposal.yaml  ci-security.md  ci-security.yaml  code-style.md  code-style.yaml  concurrency.md  configuration.md  configuration.yaml  cs-behavior.yaml  datalayer.md  datalayer.yaml  demo-ci.yaml  demo-cli.md  demo-cli.yaml  (+92 more)
test/: AGENTS.md  __init__.py  conftest.py  test_behavior_dispatcher.py  test_config.py  test_datalayer_in_memory.py  test_demo_states_export.py  test_docs_imports.py  test_errors.py  test_pytest_collection_hygiene.py  test_semantic_activity_patterns.py  test_semantic_handler_map.py  test_semantic_registry.py
tools/: migrate_spec_md_to_yaml.py
ui/: CLAUDE.md  LOG_REPLAY_README.md  MULTI_FOLDER_UPLOAD.md  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
vultron/: __init__.py  activity_patterns.py  behavior_dispatcher.py  config.py  dispatcher_errors.py  enums.py  errors.py  semantic_handler_map.py  semantic_map.py  semantic_registry.py  types.py
wip_notes/: design_notes.md
(+3440 files in other folders)
