[build-system]
# Todo: Why would I want to use a different build system?
# SetupTools
requires = ["setuptools>66", "setuptools-scm"]
build-backend = "setuptools.build_meta"
# Flit
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
# Hatchling
#requires = ["hatchling"]
#build-backend = "hatchling.build"
# PDM-Backend
#requires = ["pdm-backend"]
#build-backend = "pdm.backend"

[project]
name = "vultron"
authors = [
    { name = "Allen D. Householder", email="adh@cert.org" },
]
description = "A prototype implementation of the Vultron protocol."
readme = {file="README.md", content-type="text/markdown"}
requires-python = ">=3.12"
keywords =["vultron","cvd","vulnerability disclosure"]
license = {file="LICENSE.md"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dataclasses-json==0.6.7",
    "markdown-exec==1.11.0",
    "mkdocs-include-markdown-plugin==7.1.7",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-material==9.6.20",
    "mkdocs-print-site-plugin==2.8",
    "mkdocs==1.6.1",
    "mkdocstrings-python==1.18.2",
    "mkdocstrings==0.30.0",
    "networkx==3.4.2",
    "owlready2==0.48",
    "pandas==2.3.2",
    "rdflib==7.1.4",
    "scipy==1.15.2",
    "pydantic==2.10.6",
    "mkdocs-autorefs==1.4.3",
    "mkdocs-bibtex==4.4.0",
]
dynamic = ["version",]

[project.scripts]
vultrabot_pacman="vultron.bt.base.demo.pacman:main"
vultrabot_robot="vultron.bt.base.demo.robot:main"
vultrabot_cvd="vultron.demo.vultrabot:main"
vultrabot="vultron.scripts.vultrabot:main"


[project.urls]
"Homepage" = "https://certcc.github.io/Vultron"
"Project" = "https://github.com/CERTCC/Vultron"
"Bug Tracker" = "https://github.com/CERTCC/Vultron/issues"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["vultron*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["test*"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools_scm]
version_file = "vultron/_version.py"

#[tools.setuptools.dynamic]

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[tool.uv.workspace]
members = [
    "help",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest==8.4.2",
]
