[build-system]
# Todo: Why would I want to use a different build system?
# SetupTools
requires = ["setuptools>=82.0.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"
# Flit
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
# Hatchling
#requires = ["hatchling"]
#build-backend = "hatchling.build"
# PDM-Backend
#requires = ["pdm-backend"]
#build-backend = "pdm.backend"

[project]
name = "vultron"
authors = [
    { name = "Allen D. Householder", email="adh@cert.org" },
]
description = "A prototype implementation of the Vultron protocol."
readme = {file="README.md", content-type="text/markdown"}
requires-python = ">=3.12"
keywords =["vultron","cvd","vulnerability disclosure"]
license = {file="LICENSE.md"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.136.1",
    "isodate>=0.7.2",
    "markdown-exec>=1.11.0",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-include-markdown-plugin>=7.1.7",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-print-site-plugin>=2.8",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.18.2",
    "mkdocstrings>=1.0.4",
    "networkx>=3.5",
    "owlready2>=0.48",
    "pandas>=3.0.2",
    "pydantic==2.13.4",
    "py-trees>=2.2.0",
    "rdflib>=7.2.1",
    "scipy>=1.16.2",
    "uvicorn>=0.46.0",
    "click>=8.3.3",
    "griffelib>=2.0.0",
    "transitions>=0.9.3",
    "sqlmodel>=0.0.38",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1.0",
    "pydantic-settings>=2.14.0",
    "httpx>=0.28.1",
]
dynamic = ["version",]

[project.scripts]
vultrabot_pacman="vultron.bt.base.demo.pacman:main"
vultrabot_robot="vultron.bt.base.demo.robot:main"
vultrabot_cvd="vultron.demo.vultrabot:main"
vultrabot="vultron.scripts.vultrabot:main"
vultron-demo="vultron.demo.cli:main"
spec-dump="vultron.metadata.specs.render:main_llm_json"
spec-dump-llm-json="vultron.metadata.specs.render:main_llm_json"
spec-lint="vultron.metadata.specs.lint:main"
append-history="vultron.metadata.history.cli:main"
backfill-implementation-history="vultron.metadata.history.backfill_implementation:main"


[project.urls]
"Homepage" = "https://certcc.github.io/Vultron"
"Project" = "https://github.com/CERTCC/Vultron"
"Bug Tracker" = "https://github.com/CERTCC/Vultron/issues"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["vultron*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["test*"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools_scm]
# Only consider tags that capture a version string like 1.2.3 or v1.2.3
tag_regex = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+(?:[.-]rc\\d+)?)$"
version_file = "vultron/_version.py"
# Fallback when no valid version tag is reachable (e.g. nearest tag is a
# non-semver snapshot or branch tag).  Prevents vcs_versioning AssertionError
# in `uv run` build environments.
fallback_version = "0.0.0+dev"
# Restrict git describe to semver-style tags (v<N>.*) so that branch/snapshot
# tags (e.g. snapshot-2026Q1, externally aliased as snapshot/Q1-2026) are
# never returned by git describe and never trigger a parse failure.
git_describe_command = "git describe --dirty --tags --long --match v[0-9]*"

#[tools.setuptools.dynamic]

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313' ]

[tool.pytest.ini_options]
minversion = "6.0"
# Default run excludes integration tests (demo suite) so the fast unit-test
# suite stays under ~1 minute.  To run integration tests use one of:
#
#   uv run pytest -m integration          # integration tests only
#   uv run pytest -m ""                   # all tests (unit + integration)
#   uv run pytest test/demo/              # demo/integration tests only
#
# See AGENTS.md "Testing" section for full guidance.
addopts = "-ra -q -m 'not integration'"
testpaths = [
    "test",
]
filterwarnings = [
    "always::vultron.metadata.specs.UnknownSpecIdWarning",
    "error",
]
markers = [
    "integration: marks tests as integration tests (exercise the full HTTP stack; deselected by default)",
    "spec(spec_id): mark test as verifying a specific spec requirement ID",
]

[tool.uv.workspace]
members = [
    "help",
]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "linkchecker>=10.6.0",
    "mypy>=1.20.2",
    "pandas-stubs>=2.3.2.250827",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "types-networkx>=3.6.1.20260408",
    "types-pyyaml>=6.0.12.20260510",
]
